tests/golden/errors/cramped_after_string.stderr
error[formatting]: canonical form requires exactly one space here
  --> cramped_after_string.kso:1:17
   1 | main = print "a">> print "b"
                       ^
